--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -44,7 +44,8 @@
       ],
       "prettier/prettier": "error",
       "react/prop-types": "off",
-      "react/jsx-props-no-spreading": "off"
+      "react/jsx-props-no-spreading": "off",
+      "@typescript-eslint/ban-types": "off"
     },
     "settings": {
       "import/resolver": {
