--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -45,7 +45,8 @@
       "prettier/prettier": "error",
       "react/prop-types": "off",
       "react/jsx-props-no-spreading": "off",
-      "@typescript-eslint/ban-types": "off"
+      "@typescript-eslint/ban-types": "off",
+      "@typescript-eslint/no-unused-vars": "off"
     },
     "settings": {
       "import/resolver": {
