--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@unform/mobile": "^2.1.3",
     "react": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-geolocation-service": "^5.2.0",
     "react-native-gesture-handler": "^1.9.0",
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-reanimated": "^1.13.2",
