--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native": "0.63.4",
     "react-native-geolocation-service": "^5.2.0",
     "react-native-gesture-handler": "^1.9.0",
+    "react-native-image-picker": "^3.2.1",
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
