--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-firebase/app": "^10.4.0",
     "@react-native-firebase/auth": "^10.4.1",
     "@react-native-firebase/firestore": "^10.4.0",
+    "@react-native-firebase/storage": "^10.4.0",
     "@react-navigation/bottom-tabs": "^5.11.7",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
