--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -46,7 +46,8 @@
       "react/prop-types": "off",
       "react/jsx-props-no-spreading": "off",
       "@typescript-eslint/ban-types": "off",
-      "@typescript-eslint/no-unused-vars": "off"
+      "@typescript-eslint/no-unused-vars": "off",
+      "@typescript-eslint/no-non-null-assertion": "off"
     },
     "settings": {
       "import/resolver": {
