--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.16.1",
+    "react-native-switch-selector": "^2.1.4",
     "react-native-vector-icons": "^7.1.0",
     "styled-components": "^5.2.1"
   },
