--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@unform/mobile": "^2.1.3",
     "react": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-elements": "^3.3.2",
     "react-native-geolocation-service": "^5.2.0",
     "react-native-gesture-handler": "^1.9.0",
     "react-native-image-picker": "^3.2.1",
